// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Album Many Artists 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1m58e9b"
    >
      <div
        class="content svelte-1m58e9b"
      >
        <span
          class="artwork svelte-1m58e9b"
        >
          <img
            alt="./cover.jpg"
            class="h-full w-full svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./cover.jpg#nonce=0.1"
          />
           
          
           
        </span>
         
        <p
          class="controls svelte-1m58e9b"
        >
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="open"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              open_in_full
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="play"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1m58e9b"
      >
        <h3
          class="svelte-1m58e9b"
        >
          Diamonds on the inside
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          by 
          <a
            class="underlined"
            href="#/artist/1"
            onclick="event.stopPropagation()"
          >
            Ben Harper
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/2"
            onclick="event.stopPropagation()"
          >
            The Innocent Criminals
          </a>
          
        </h4>
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Album Many Artists 2`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1m58e9b"
    >
      <div
        class="content svelte-1m58e9b"
      >
        <span
          class="artwork svelte-1m58e9b"
        >
          <img
            alt="./cover.jpg"
            class="h-full w-full svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./cover.jpg#nonce=0.1"
          />
           
          
           
        </span>
         
        <p
          class="controls svelte-1m58e9b"
        >
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="open"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              open_in_full
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="play"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1m58e9b"
      >
        <h3
          class="svelte-1m58e9b"
        >
          Diamonds on the inside
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          by 
          <a
            class="underlined"
            href="#/artist/3"
            onclick="event.stopPropagation()"
          >
            Muse
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/4"
            onclick="event.stopPropagation()"
          >
            Perl Jam
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/4"
            onclick="event.stopPropagation()"
          >
            Joe Satriani
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/6"
            onclick="event.stopPropagation()"
          >
            Avenged Sevenfold
          </a>
          
        </h4>
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Album No Artist 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1m58e9b"
    >
      <div
        class="content svelte-1m58e9b"
      >
        <span
          class="artwork svelte-1m58e9b"
        >
          <img
            alt="./cover.jpg"
            class="h-full w-full svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./cover.jpg#nonce=0.1"
          />
           
          
           
        </span>
         
        <p
          class="controls svelte-1m58e9b"
        >
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="open"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              open_in_full
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="play"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1m58e9b"
      >
        <h3
          class="svelte-1m58e9b"
        >
          Diamonds on the inside
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        />
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Album Unknown 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1m58e9b"
    >
      <div
        class="content svelte-1m58e9b"
      >
        <span
          class="artwork svelte-1m58e9b"
        >
          <img
            class="h-full w-full svelte-hn7eai rounded-sm hidden"
            loading="lazy"
          />
           
          <span
            class="h-full w-full svelte-hn7eai rounded-sm"
          >
            <i
              class="material-icons svelte-hn7eai"
            >
              music_note
            </i>
          </span>
          
           
        </span>
         
        <p
          class="controls svelte-1m58e9b"
        >
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="open"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              open_in_full
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="play"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-9liv1b"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-9liv1b"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1m58e9b"
      >
        <h3
          class="svelte-1m58e9b"
        >
          Unknown
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          by 
          <a
            class="underlined"
            href="#/artist/1"
            onclick="event.stopPropagation()"
          >
            Ben Harper
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/2"
            onclick="event.stopPropagation()"
          >
            The Innocent Criminals
          </a>
          
        </h4>
      </header>
    </span>
  </div>
</section>
`;
